--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 8090
+  forward-headers-strategy: framework
 
 spring:
   application:
@@ -40,3 +41,45 @@ spring:
             - Path=/auth/**
           filters:
             - RewritePath=/auth/(?<path>.*), /$\{path}
+
+
+springdoc:
+  enable-native-support: true
+  api-docs:
+    groups:
+      enabled: true
+    enabled: true
+  group-configs:
+    - group: bureaucracy-service
+      paths-to-match:
+        - /bureaucracy/**
+      display-name: BureaucracyService
+
+    - group: medical-service
+      paths-to-match:
+        - /med/**
+      display-name: MedicalService
+
+    - group: qr-management
+      paths-to-match:
+        - /qr/**
+      display-name: QRManagement
+
+    - group: auth-service
+      paths-to-match:
+        - /auth/**
+      display-name: AuthService
+
+  swagger-ui:
+    path: /swagger-ui.html
+    config-url: /v3/api-docs/swagger-config
+    url: /v3/api-docs
+    urls:
+      - url: /bureaucracy/v3/api-docs
+        name: BureaucracyService
+      - url: /med/v3/api-docs
+        name: MedicalService
+      - url: /qr/v3/api-docs
+        name: QRManagement
+      - url: /auth/v3/api-docs
+        name: AuthService
